<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_conversion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.brandeis.zichenghu.conversion.Conversion">


    <Button
        android:text="@string/f_to_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert"
        android:layout_alignBaseline="@+id/input"
        android:layout_alignBottom="@+id/input"
        android:layout_alignStart="@+id/rtn" />

    <TextView
        android:text="@string/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignStart="@+id/abt" />

    <Button
        android:text="@string/rtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rtn"
        android:layout_below="@+id/convert"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/abt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/abt"
        android:layout_alignBaseline="@+id/rtn"
        android:layout_alignBottom="@+id/rtn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />

    <Button
        android:text="@string/clr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clr"
        android:layout_marginStart="22dp"
        android:layout_alignBaseline="@+id/rtn"
        android:layout_alignBottom="@+id/rtn"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clr"
        android:layout_toStartOf="@+id/rtn"
        android:layout_marginTop="124dp"
        android:id="@+id/textView3" />

</RelativeLayout>
